--- a/src/styles.css
+++ b/src/styles.css
@@ -53,7 +53,8 @@ input[type="text"]{
 border-radius:10px;
 }
 .toggle-text {
-    font-size: 18px;
+    font-size: 19px;
+    font-weight: 800;
 }
 
 .toggle {
@@ -70,7 +71,10 @@ border-radius:10px;
     padding: 5px;
     margin: 0 10px;
 }
-
+#darkenText{
+    color:black;
+    
+}
 .inner-circle {
     width: 30px;
     height: 30px;
@@ -81,9 +85,21 @@ border-radius:10px;
 
 .toggle-btn.toggled > .inner-circle {
     transform: translateX(30px);
-    background-color: #333;
+    background-color: rgb(22, 22, 22);
 }
 
 .unselected {
     opacity: 0.25;
+}
+footer{
+color:aliceblue;
+display:flex;
+flex-direction: column;
+align-items: center;
+
+
+}
+a{
+    color:black;
+    font-style: oblique;
 }
